# ecommerce_pro_learn

./: .gitattributes  .gitignore  learning.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b9f846d88cd_add_token_in_table.py  6c3b4a77a417_create_user_refreshtoken_table.py  c8b8d0f5e0a1_update_tables.py  cd65f195c52a_create_product_and_category_tables.py  ec83333b4d33_fix_product_and_category_tables.py  ffc9a74c9d1d_init.py
app/: main.py
app/account/: auth.py  db_commits.py  dependency.py  log_config.py  models.py  routers.py  schemas.py  services.py
app/db/: config.py  models.py
app/product/: models.py  schemas.py  services.py  utils.py
app/product/routers/: category.py  product.py
